--- a/src/test/resources/com/p6spy/engine/spy/P6Test_MSSQLServer.properties
+++ b/src/test/resources/com/p6spy/engine/spy/P6Test_MSSQLServer.properties
@@ -15,7 +15,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-modulelist=com.p6spy.engine.logging.P6LogFactory,com.p6spy.engine.test.P6TestFactory
+modulelist=com.p6spy.engine.modules.logging.P6LogFactory,com.p6spy.engine.test.P6TestFactory
 appender=com.p6spy.engine.spy.appender.P6TestLogger
 filter=true
 url=jdbc:p6spy:sqlserver://localhost:1434
