--- a/src/test/resources/com/p6spy/engine/spy/P6Test_mbean.properties
+++ b/src/test/resources/com/p6spy/engine/spy/P6Test_mbean.properties
@@ -15,7 +15,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-modulelist=com.p6spy.engine.logging.P6LogFactory,com.p6spy.engine.test.P6TestFactory,com.p6spy.engine.outage.P6OutageFactory
+modulelist=com.p6spy.engine.modules.logging.P6LogFactory,com.p6spy.engine.test.P6TestFactory,com.p6spy.engine.outage.P6OutageFactory
 appender=com.p6spy.engine.spy.appender.P6TestLogger
 # we test against h2 DB
 url=jdbc:p6spy:h2:mem:p6spy
